2019-06-17 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/tests/bug-2912.c:
	  Fix a typo that resulted in a test being accidentially enabled for pdk.
	* src/z80/gen.c:
	  Fix handling of swapped register operand in 16-bit shift by literal.

2019-06-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc,
	  src/SDCCgen.h,
	  src/SDCCgen.c,
	  src/z80/gen.c:
	  Improve handling of a.

2019-06-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix an issue in iy shuffling.

2019-06-15 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/ralloc.c,
	  src/z80/ralloc2.cc:
	  Handle iy like other registers.

2019-06-15 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/ralloc2.cc:
	  Minor register allocation improvement,
	  fix a --reserve-regs-iy issue.

2019-06-14 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/z80/gen.c,
	  support/regression/tests/bug-2912.c:
	  Fix bug #2912.

2019-06-12 Philipp Klaus Krause <pkk AT spth.de>

	* Merge pic14 branch.

2019-06-12 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* device/lib/pic14/Makefile.common,
	  device/lib/pic14/Makefile.in,
	  device/lib/pic14/libc/Makefile.in,
	  device/lib/pic14/libm/Makefile.in,
	  device/lib/pic14/libsdcc/enhanced/Makefile.in,
	  device/lib/pic14/libsdcc/enhanced-no-xinst/Makefile.in,
	  device/lib/pic14/libsdcc/regular/Makefile.in:
	  Fix another pic14 out-of-tree-build issue.

2019-06-11 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/ctype.h,
	  device/include/pic14/stdlib.h:
	  Work around some pic14 inlining issue.
	* sdcc/aclocal.m4,
	  sdcc/config.guess,
	  sdcc/config.sub,
	  sdcc/device/lib/pic14/install-sh,
	  sdcc/device/lib/pic14/libc/Makefile.am,
	  sdcc/device/lib/pic14/libc/Makefile.in,
	  sdcc/device/lib/pic14/libm/Makefile.am,
	  sdcc/device/lib/pic14/libm/Makefile.in,
	  sdcc/device/lib/pic14/libsdcc/enhanced/Makefile.am,